skeleton/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "${join(hostnames,',')}"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ${name}
spec:
  ingressClassName: nginx
  rules:
    _foreach: ${hostname}
    _template:
      host: netice9.com
      http:
        paths:
          - backend:
              service:
                name: ${serviceName}
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - "netice9.com"
        - "www.netice9.com"
      secretName: nin-home-netice9-com-tls
